@@ -1,6 +1,0 @@
-dist2vec <-
-function(x)
-{
-    attributes(x) <- NULL
-    x
-}
