@@ -2,6 +2,7 @@ MEFA VERSIONS
 
 Version 3.1-1 -- July 10, 2009 (opened - r407)
 
+    * dist2vec: deleted (use as.vector instead)
     * fill.na: accepts 1 dimensional vectors.
     * as.data.frame.dist: now returns labels of the
       dist object (dim.names=TRUE).
